--- a/index.html
+++ b/index.html
@@ -1,45 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>استبيان Heartbridge</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Heartbridge</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>استبيان تحليل الشخصية</h1>
-    <form id="quizForm">
-      <div class="question">
-        <label>١. ما مدى تعبيرك عن مشاعرك في العلاقات؟</label><br>
-        <input type="radio" name="q1" value="1"> نادرًا<br>
-        <input type="radio" name="q1" value="2"> أحيانًا<br>
-        <input type="radio" name="q1" value="3"> غالبًا<br>
-        <input type="radio" name="q1" value="4"> دائمًا<br>
-      </div>
+  <h1>تحليل الانطباع</h1>
+  <form id="quizForm">
+    <textarea id="textarea" placeholder="اكتب هنا..."></textarea>
+    <button type="submit">تحليل</button>
+  </form>
+  <div id="result"></div>
 
-      <div class="question">
-        <label>٢. كيف تتعامل مع الخلافات؟</label><br>
-        <input type="radio" name="q2" value="1"> أتجنب المواجهة<br>
-        <input type="radio" name="q2" value="2"> أهدأ ثم أتكلم<br>
-        <input type="radio" name="q2" value="3"> أتكلم فورًا<br>
-        <input type="radio" name="q2" value="4"> أُصرّ على موقفي دائمًا<br>
-      </div>
-
-      <div class="question">
-        <label>٣. ما مدى حاجتك المستمرة للاهتمام من الطرف الآخر؟</label><br>
-        <input type="radio" name="q3" value="1"> ضعيفة<br>
-        <input type="radio" name="q3" value="2"> متوسطة<br>
-        <input type="radio" name="q3" value="3"> عالية<br>
-        <input type="radio" name="q3" value="4"> مفرطة<br>
-      </div>
-
-      <button type="submit">احسب النتيجة</button>
-    </form>
-
-    <div id="result"></div>
-  </div>
-
+  <script src="src/utils/detectCluster.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
